<resources>
    <string name="app_name">Project Silent Willow Control Application</string>
    <string name="emptycontent">EC</string>
    <string name="uparrow">↑</string>
    <string name="downarrow">↓</string>
    <string name="leftarrow">←</string>
    <string name="rotateleftarrow">⇇</string>
    <string name="rightarrow">→</string>
    <string name="rotaterightarrow">⇉</string>
    <string name="stop">STOP</string>
    <string name="connectionStatus">----------------------------------------------------------------------------</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="others">More</string>
        <string name="AION">AI ON</string>
        <string name="AIOFF">AI OFF</string>
    <string name="startbtscan">Paired devices</string>
    <string name="stopbtscan">Stop scan</string>
    <string name="enablebt">BT ON</string>
    <string name="disablebt">BT OFF</string>
    <string name="relayon">Relay ON</string>
    <string name="relayoff">Relay OFF</string>
    <string name="licensebutton">License</string>
    <string name="about">About</string>
</resources>