<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkcolor"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/emptycontent"
        android:src="@drawable/launchicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/connectionstatus"
        android:layout_width="397dp"
        android:layout_height="15dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/connectionStatus"
        android:textColor="@color/disconnected"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/connect"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#22272e"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/buttonclick" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#22272e"
        android:text="@string/disconnect"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/buttonclick" />

    <Button
        android:id="@+id/enableBT"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#22272e"
        android:text="@string/enablebt"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/connect"
        app:layout_constraintStart_toStartOf="@+id/connect"
        app:layout_constraintTop_toBottomOf="@+id/connect"
        app:rippleColor="@color/buttonclick" />

    <Button
        android:id="@+id/disableBT"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#22272e"
        android:text="@string/disablebt"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/disconnect"
        app:layout_constraintStart_toStartOf="@+id/disconnect"
        app:layout_constraintTop_toBottomOf="@+id/disconnect" />

    <Button
        android:id="@+id/others"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#22272e"
        android:text="@string/others"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/relayon"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#22272e"
        android:text="@string/relayon"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/enableBT"
        app:layout_constraintStart_toStartOf="@+id/enableBT"
        app:layout_constraintTop_toBottomOf="@+id/enableBT" />

    <Button
        android:id="@+id/relayoff"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#22272e"
        android:text="@string/relayoff"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/disableBT"
        app:layout_constraintStart_toStartOf="@+id/disableBT"
        app:layout_constraintTop_toBottomOf="@+id/disableBT" />

    <Button
        android:id="@+id/forwards"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#22272e"
        android:text="@string/uparrow"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/right"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#22272e"
        android:text="@string/rightarrow"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView" />

    <Button
        android:id="@+id/backwards"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#22272e"
        android:text="@string/downarrow"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <Button
        android:id="@+id/rotateright"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#22272e"
        android:text="@string/rotaterightarrow"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/backwards"
        app:layout_constraintTop_toBottomOf="@+id/right" />

    <Button
        android:id="@+id/left"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#22272e"
        android:textColor="@color/main"
        android:text="@string/leftarrow"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/horizontalScrollView" />

    <Button
        android:id="@+id/rotateleft"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#22272e"
        android:text="@string/rotateleftarrow"
        android:textColor="@color/main"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/backwards"
        app:layout_constraintTop_toBottomOf="@+id/left" />

    <Button
        android:id="@+id/stop"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/stop"
        android:backgroundTint="#22272e"
        android:textColor="@color/main"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/backwards"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/forwards" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/emptycontent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/speed"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_marginBottom="20dp"
        android:progressBackgroundTint="@color/seekbar"
        android:progressTint="@color/seekbar"
        android:thumb="?android:attr/listChoiceIndicatorSingle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>